# whisperpocket

./: .gitignore  LICENSE  Makefile  README.md  brabble-tts-hook.sh  brabpocket  listen.py  pyproject.toml  wp  wp-hook.sh
Resources/: com.brabpocket.daemon.plist  com.whisperpocket.daemon.plist
stt-server/: .gitignore  __main__.py  pyproject.toml  server.py
