[project]
name = "brabpocket-stt"
version = "0.1.0"
description = "MLX Whisper STT daemon for brabpocket"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "numpy>=1.26",
    "lightning-whisper-mlx",
    "soundfile",
]

[project.scripts]
brabpocket-stt = "server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
