[project]
name = "whisperpocket-stt"
version = "0.1.0"
description = "MLX Whisper STT daemon for whisperpocket"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "numpy>=1.26",
    "lightning-whisper-mlx",
    "soundfile",
]

[project.scripts]
wp-stt = "server:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
